[gd_scene load_steps=5 format=3 uid="uid://jaoakuonoimi"]

[ext_resource type="Script" path="res://Scripts/GUI/ChessPiece.gd" id="1_gl8qw"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cxifi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_asb6a"]
atlas = SubResource("CompressedTexture2D_cxifi")
region = Rect2(0, 0, 320, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ceko"]
size = Vector2(250, 250)

[node name="ChessPiece" type="Node2D"]
script = ExtResource("1_gl8qw")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -140.0
offset_top = -140.0
offset_right = 140.0
offset_bottom = 140.0

[node name="ChessSprite" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = SubResource("AtlasTexture_asb6a")

[node name="Area2D" type="Area2D" parent="."]
modulate = Color(0.211765, 0.0627451, 0.0823529, 1)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_7ceko")
debug_color = Color(0.392157, 0.27451, 0.811765, 0.419608)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
